--- a/Stage_1_EDA.ipynb
+++ b/Stage_1_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPslo/HNYCp5xOkM2n6kIZz",
+      "authorship_tag": "ABX9TyPnkNSfqxdvk+x9/lRo1hSk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3257,6 +3257,7 @@
         "  d. tidak memiliki hutang di bank (personal loan)<br>\n",
         "  e. dikontak menggunakan celullar/HP <br>\n",
         "  f. tidak pernah gagal membayar hutang (default = 'no')<br>\n",
+        "  g. memiliki rata-rata balance positif (negative balance mungkin mengindikasikan ybs memiliki hutang, rata-rata saldo zero dapat mengindikasikan ybs menggunakan akun banknya hanya untuk transaksi dan tidak ada uang berlebih)\n",
         "\n",
         "Dari penjabaran plot multivariat numerik dan kategorikal di atas, semua feature numerik dan kategorikal akan dipertahankan untuk modeling iterasi pertama. \n",
         "<br>\n",
@@ -3293,7 +3294,7 @@
         "  c. pendidikan lanjutan 'secondary' dan 'tertiary'<br>\n",
         "  d. tidak memiliki cicilan rumah<br>\n",
         "  e. tidak memiliki hutang di bank<br>\n",
-        "Tim Marketing dapat memusatkan effort acquisition terhadap orang-orang dengan karakteristik seperti di atas. "
+        "Tim Marketing dapat memusatkan effort terhadap orang-orang dengan karakteristik seperti di atas. "
       ],
       "metadata": {
         "id": "SUdPmuGvURMz"
@@ -3814,8 +3815,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "X4yKoaDJBDhl"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        " 4. Average yearly balance. Untuk performa campaign yang lebih baik, sebaiknya orang-orang dengan average yearly balance negative diexclude dari whitelist telemarketing campaign. Selain % yes take up term-depositnya paling rendah dibanding 2 segment lain (visualisasi 4A), sekitar 70% dari orang2 ini memiliki housing loan dan 30% memiliki personal loan (vis 4B dan 4C). Adanya loan mengindikasikan rendah atau tidak adanya 'cold money' yang bisa digunakan untuk investasi (seperti pada term-deposit)."
+        " 4. Average yearly balance. Untuk performa campaign yang lebih baik, sebaiknya orang-orang dengan average yearly balance negative diexclude dari whitelist telemarketing campaign. Selain % yes take up term-depositnya paling rendah dibanding 2 segment lain (visualisasi 4A), sekitar 70% dari orang2 ini memiliki housing loan dan 30% memiliki personal loan (vis 4B dan 4C). Adanya loan mengindikasikan rendah atau tidak adanya 'cold money' yang bisa digunakan untuk investasi (seperti pada term-deposit).\n",
+        "\n",
+        " Sementara itu, client dengan average yearly balance = 0 mengindikasikan bahwa akun mereka lebih bersifat transaksional. Client hanya akan menambah saldo ketika perlu melakukan pembayaran atau transfer. Client seperti ini mungkin memiliki 'cold money' di insititusi lain. Jika kita bisa memperoleh data agensi (seperti SLIK) yang mengcompile data asset dan liability client di insititusi lain, kita dapat membuat program untuk menarik minat mereka agar berinvestasi pada bank kita."
       ],
       "metadata": {
         "id": "5hW8gOO7xbN5"
