--- a/Stage_1_EDA.ipynb
+++ b/Stage_1_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPnkNSfqxdvk+x9/lRo1hSk",
+      "authorship_tag": "ABX9TyOMEdsttd3xplDcQjW1uvwh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3825,7 +3825,7 @@
       "source": [
         " 4. Average yearly balance. Untuk performa campaign yang lebih baik, sebaiknya orang-orang dengan average yearly balance negative diexclude dari whitelist telemarketing campaign. Selain % yes take up term-depositnya paling rendah dibanding 2 segment lain (visualisasi 4A), sekitar 70% dari orang2 ini memiliki housing loan dan 30% memiliki personal loan (vis 4B dan 4C). Adanya loan mengindikasikan rendah atau tidak adanya 'cold money' yang bisa digunakan untuk investasi (seperti pada term-deposit).\n",
         "\n",
-        " Sementara itu, client dengan average yearly balance = 0 mengindikasikan bahwa akun mereka lebih bersifat transaksional. Client hanya akan menambah saldo ketika perlu melakukan pembayaran atau transfer. Client seperti ini mungkin memiliki 'cold money' di insititusi lain. Jika kita bisa memperoleh data agensi (seperti SLIK) yang mengcompile data asset dan liability client di insititusi lain, kita dapat membuat program untuk menarik minat mereka agar berinvestasi pada bank kita."
+        " Sementara itu, client dengan average yearly balance = 0 mengindikasikan bahwa akun mereka lebih bersifat transaksional. Client hanya akan menambah saldo ketika perlu melakukan pembayaran atau transfer. Client seperti ini mungkin memiliki 'cold money' di insititusi lain. Jika kita bisa memperoleh data biro (seperti SLIK) yang mengcompile data asset dan liability client di insititusi lain, kita dapat membuat program untuk menarik minat mereka agar berinvestasi pada bank kita."
       ],
       "metadata": {
         "id": "5hW8gOO7xbN5"
